# printf

./: CMakeLists.txt  Makefile  a.out
includes/: ft_printf.h
libft/: Makefile  ft_strchr.c  ft_strchri.c  ft_ulltoa_base.c  libft.h
libft/includes/: libft.h
libft/strings/: ft_isprint.c
libft/vector/: vector_move.c  vector_push_back.c
p/: CMakeLists.txt  Makefile
p/includes/: ft_printf.h
p/src/: handle_numbers.c  main.c  round_numbers.c
src/: floats.c  ft_printf.c  handle_numbers.c  long.c  main.c  parse.c  print_nbr.c  print_str.c  specifiers.c
